feat(toolbar): setup the toolbar layout
- update map layout\n- add full and short toolbar states

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -15,6 +15,7 @@
   "horizontal_direction": "Horizontal direction",
   "legend_presentation": "Legend presentation",
   "layers": "Layers",
+  "toolbar": "Toolbar",
   "feed": "Feed",
   "deselect": "Deselect",
   "spinner_text": "Gathering data",
