--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -328,5 +328,10 @@
     "finishMessage": "Recording has been finished",
     "startMessage": "Recording has been started",
     "noSensorsError": "Your device desn't have the required sensors"
+  },
+  "layer_features_panel": {
+    "noFeatureSelected": "No feature selected",
+    "chooseFeature": "Choose feature",
+    "listInfo": "The list is filtered by selected area and sorted by priority and mapped percentage."
   }
 }
