--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -80,7 +80,18 @@
   },
   "mcda": {
     "title": "Multi-criteria decision analysis",
-    "name": "MCDA"
+    "name": "MCDA",
+    "modal_title": "Create analysis",
+    "modal_input_name": "Name",
+    "modal_input_name_placeholder": "Set layer name",
+    "modal_input_indicators": "List of layers",
+    "modal_input_indicators_placeholder": "Select layers",
+    "modal_input_indicators_no_options": "No options",
+    "btn_cancel": "Cancel",
+    "btn_save": "Save analysis",
+    "error_bad_layer_data": "Invalid mcda layer data",
+    "legend_title": "Legend",
+    "legend_subtitle": "Hexagons are colored as weighted average of normalized and transformed layers values"
   },
   "event_list": {
     "warning_title": "Can't use map as filter",
