Legend and Layers now use same and new Layer component (#641)
* - Legend and Layers now use same and new Layers component
- Removed folding indicator when no needed
- Removed unnecessary Folding component
- Indents created with FoldingWrap component instead on category and group components
- Bivariate legend now located under layer as all other components
- Bivariate legend now have same font style as other legends in compact panel mode
fixes:
- 15274
- 12632

* feat: ability to setup editor for layer

* Add v3 context for @reatom/npm-react package effects

* httpClient: add ability to call api-s with absolute path

* core: add modal service

* chore

* add editors field to logical layer

* - move bivariate stats to core/resources
- fix types error
- mcda editor added

* Modal fixes (#647)

* modal fixes

* update deps and readme

* Update src/features/bivariate_manager/components/BivariatePanel/BivariatePanel.module.css

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* fix infinity in coordinates after auto zoom on mobile view

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* fis types in v3-v2 converter

* retry functionality in api client

* refactor: autofocus to geometry rewritten to v3

* refactor: boundary_selector

* fix: type error

* remove unnecessary code

* fix adapter

* simplify bivariate resource

* disable ts error check

* auto-deploy script

* prevent bugs with default store usage

* update ui kit version

* fix tests

* Modal fixes (#647)

* modal fixes

* update deps and readme

* Update src/features/bivariate_manager/components/BivariatePanel/BivariatePanel.module.css

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* fix infinity in coordinates after auto zoom on mobile view

---------

Co-authored-by: coderabbitai[bot] <13662

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -80,7 +80,18 @@
   },
   "mcda": {
     "title": "Multi-criteria decision analysis",
-    "name": "MCDA"
+    "name": "MCDA",
+    "modal_title": "Create analysis",
+    "modal_input_name": "Name",
+    "modal_input_name_placeholder": "Set layer name",
+    "modal_input_indicators": "List of layers",
+    "modal_input_indicators_placeholder": "Select layers",
+    "modal_input_indicators_no_options": "No options",
+    "btn_cancel": "Cancel",
+    "btn_save": "Save analysis",
+    "error_bad_layer_data": "Invalid mcda layer data",
+    "legend_title": "Legend",
+    "legend_subtitle": "Hexagons are colored as weighted average of normalized and transformed layers values"
   },
   "event_list": {
     "warning_title": "Can't use map as filter",
@@ -330,6 +341,7 @@
     "noSensorsError": "Your device desn't have the required sensors"
   },
   "layer_features_panel": {
+    "empty": "Layer features will be provided here",
     "noFeatureSelected": "No feature selected",
     "chooseFeature": "Choose feature",
     "listInfo": "The list is filtered by selected area and sorted by priority and mapped percentage."
