--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -27,7 +27,8 @@
     "focused_geometry_editor": "Draw or edit\ngeometry",
     "edit_in_osm": "Edit map in OSM",
     "tools_label": "Tools",
-    "selected_area_label": "Selected area"
+    "selected_area_label": "Selected area",
+    "upload_analysis": "Upload\nanalysis"
   },
   "feed": "Feed",
   "deselect": "Deselect",
@@ -79,8 +80,6 @@
     "filter_denominator": "Filter Denominator"
   },
   "mcda": {
-    "title": "Multi-criteria decision analysis",
-    "name": "MCDA",
     "modal_title": "Create analysis",
     "modal_input_name": "Name",
     "modal_input_name_placeholder": "Set layer name",
