--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -27,7 +27,8 @@
     "focused_geometry_editor": "Draw or edit\ngeometry",
     "edit_in_osm": "Edit map in OSM",
     "tools_label": "Tools",
-    "selected_area_label": "Selected area"
+    "selected_area_label": "Selected area",
+    "upload_mcda": "Upload\nMCDA"
   },
   "feed": "Feed",
   "deselect": "Deselect",
@@ -89,7 +90,8 @@
     "modal_input_indicators_no_options": "No options",
     "btn_cancel": "Cancel",
     "btn_save": "Save analysis",
-    "error_bad_layer_data": "Invalid mcda layer data",
+    "error_bad_layer_data": "Invalid MCDA layer data",
+    "error_invalid_file": "Invalid MCDA file format",
     "legend_title": "Legend",
     "legend_subtitle": "Hexagons are colored as weighted average of normalized and transformed layers values"
   },
