chore: move MCDALayerDetails into separate component

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -108,7 +108,7 @@
       "natural_logarithm": "Natural logarithm",
       "square_root": "Square root",
       "no": "No",
-      "min-max": "Min-max"
+      "max-min": "Max-min"
     },
     "bad": "Bad",
     "good": "Good"
