--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -101,7 +101,9 @@
       "sentiment": "Sentiment",
       "weight": "Weight",
       "transform": "Transform",
+      "transformation": "Transformation",
       "normalize": "Normalize",
+      "normalization": "Normalization",
       "reset_limits_to_default": "Reset limits to default",
       "exclude": "Exclude",
       "as_values_on_limits": "As values on limits",
