--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -110,7 +110,14 @@
       "natural_logarithm": "Natural logarithm",
       "square_root": "Square root",
       "no": "No",
-      "max-min": "Max-min"
+      "max-min": "Max-min",
+      "errors": {
+        "weight_cannot_be_empty": "Weight cannot be empty",
+        "weight_must_be_a_number": "Weight must be a valid number",
+        "range_from_cannot_be_bigger": "The ‘from’ value cannot be bigger than the ‘to’ value",
+        "range_cannot_be_empty": "Range cannot be empty",
+        "range_must_be_a_number": "Range must be a valid number"
+      }
     },
     "bad": "Bad",
     "good": "Good"
