--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -83,7 +83,7 @@
   "mcda": {
     "title": "Multi-criteria decision analysis",
     "name": "MCDA",
-    "modal_title": "Create analysis",
+    "modal_title": "Customize analysis",
     "modal_input_name": "Name",
     "modal_input_name_placeholder": "Set layer name",
     "modal_input_indicators": "List of layers",
@@ -91,6 +91,7 @@
     "modal_input_indicators_no_options": "No options",
     "btn_cancel": "Cancel",
     "btn_save": "Save analysis",
+    "error_analysis_name_cannot_be_empty": "Analysis name cannot be empty",
     "error_bad_layer_data": "Invalid MCDA layer data",
     "error_invalid_file": "Invalid MCDA file format",
     "legend_title": "Legend",
