fix(18345): Fix broken link to Privacy Policy in Cookies popup in Ukrainian

--- a/src/core/localization/gettext/uk/common.po
+++ b/src/core/localization/gettext/uk/common.po
@@ -976,8 +976,7 @@ msgstr ""
 "персоналізовані послуги, і додаткові файли cookies, щоб покращити Disaster "
 "Ninja та ваш досвід. Ви можете будь-коли змінити налаштування файлів cookies "
 "або відкликати згоду на використання додаткових файлів cookies.\n"
-"Щоб дізнатися більше, перегляньте нашу [Політику конфіденційності](Про нас/"
-"Конфіденційність)"
+"Щоб дізнатися більше, перегляньте нашу [Політику конфіденційності](about/privacy)"
 
 #: cookie_banner##decline_all
 msgid "Decline optional cookies"
