feat(18060): add "Save as reference area" button

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -376,5 +376,8 @@
     "noFeatureSelected": "No feature selected",
     "chooseFeature": "Choose feature",
     "listInfo": "The list is filtered by selected area and sorted by priority and mapped percentage."
+  },
+  "reference_area": {
+    "save_as_reference_area": "Save as reference area"
   }
 }
