--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -211,6 +211,11 @@
       "name": "Selected Area"
     }
   },
+  "reference_area_layer": {
+    "settings": {
+      "name": "Reference Area"
+    }
+  },
   "drawings": {
     "self_directions_not_supported": "Self intersections are not supported!"
   },
@@ -378,6 +383,7 @@
     "listInfo": "The list is filtered by selected area and sorted by priority and mapped percentage."
   },
   "reference_area": {
-    "save_as_reference_area": "Save as reference area"
+    "save_as_reference_area": "Save as reference area",
+    "error_couldnt_save": "Unfortunately, we couldn't save your reference area. Please try again"
   }
 }
