feat(18311): add dynamic app name in cookie banner

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -360,7 +360,7 @@
   "loading_episodes": "Loading Episodes",
   "cookie_banner": {
     "header": "We value your privacy",
-    "body": "We use absolutely necessary cookies to provide you personalized services and optional cookies to improve Disaster Ninja and your experience. You can manage cookies settings or withdraw consent to optional cookies at any time.\nFor more information, please, check our [Privacy Policy](about/privacy)",
+    "body": "We use absolutely necessary cookies to provide you personalized services and optional cookies to improve {{appName}} and your experience. You can manage cookies settings or withdraw consent to optional cookies at any time.\nFor more information, please, check our [Privacy Policy](about/privacy)",
     "decline_all": "Decline optional cookies",
     "accept_all": "Accept optional cookies"
   },
