feat(18060, 18061, 12620): Save as reference area flow. Reference Area layer. Erase buttons for Reference and Selected areas (#721)
* feat(18060): add "Save as reference area" button

* chore: add Reference icon

* feat(18060): Reference Area layer

* referenceAreaLayer -> initReferenceAreaLayer

* Remove code duplication between ReferenceAreaRenderer and FocusedGeometryRenderer

* Add success notification after saving reference area

* Hide reference area from unauthorized users

* Added geometry check before API call

* Fix saving admin unit boundaries as Reference Area

* fix: fix request parameter for Reference Area

* chore: Wraps referenceArea configuration parameter in an object

* chore: Convert referenceAreaAtom and referenceAreaSourceAtom to reatom v3

* feat: Add clean Focused Geometry and Reference Area buttons

* chore: move referenceArea atom into shared_state

* fix: remove dependency on currentUser atom from Focused Geometry atom (not needed anymore)

* chore: fix CleanControl key

* chore: remove unused functions

* chore: update pnpm-lock to v 9.0

* fix: move referenceArea atom initialization into postAppInit

* feat(18063): Add Reference Area info to user profile

* chore: remove names for different geometry types, use common "Freehand geometry" name

* chore: Remove old comments

* chore(refactor): remove initReferenceArea action

* chore: add action names for new atoms

* chore: minor atom refactors

* chore: remove usage of userStateAtom from Map component

* refactor: use subscription callback instead of referenceAreaSourceAtom

* refactor: Extract Selected Area and Reference Area layers creation into common util function

* refactor: use subscription callback instead of focusedGeometrySourceAtom

* refactor: simplify state check logic for Save as reference area button

* refactor: use focusedGeometryAtom as reatom v3 in reference_area/index

* minor fixes and refactors

* chore:

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -211,6 +211,11 @@
       "name": "Selected Area"
     }
   },
+  "reference_area_layer": {
+    "settings": {
+      "name": "Reference Area"
+    }
+  },
   "drawings": {
     "self_directions_not_supported": "Self intersections are not supported!"
   },
@@ -347,6 +352,13 @@
       "id": "Indonesian",
       "de": "German",
       "uk": "Ukrainian"
+    },
+    "reference_area": {
+      "title": "Reference area",
+      "freehand_geometry": "Freehand geometry",
+      "to_replace_reference_area": "To replace reference area, select an area on the map and click \"Save as reference area\" on toolbar.",
+      "select_are_on_the_map": "Select an area on the map and click \"Save as reference area\" on toolbar to use it in further analysis.",
+      "set_the_reference_area": "Set the reference area"
     }
   },
   "current_event": {
@@ -376,5 +388,10 @@
     "noFeatureSelected": "No feature selected",
     "chooseFeature": "Choose feature",
     "listInfo": "The list is filtered by selected area and sorted by priority and mapped percentage."
+  },
+  "reference_area": {
+    "save_as_reference_area": "Save as reference area",
+    "error_couldnt_save": "Unfortunately, we couldn't save your reference area. Please try again.",
+    "selected_area_saved_as_reference_area": "Selected area has been saved as reference area. You can find it in profile."
   }
 }
