--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -186,6 +186,9 @@
     "will_be_provided": "will be provided here",
     "no_analytics": "No analytics for the selected area"
   },
+  "llm_analytics": {
+    "header_info": "### AI insights\nAdd a reference area, and we will compare selected area with it. To receive personalized conclusions, please fill out the [bio](/profile)."
+  },
   "draw_tools": {
     "area": "Polygon",
     "line": "Line",
