--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -358,7 +358,7 @@
       "freehand_geometry": "Freehand geometry",
       "to_replace_reference_area": "To replace reference area, select an area on the map and click \"Save as reference area\" on toolbar.",
       "select_are_on_the_map": "Select an area on the map and click \"Save as reference area\" on toolbar to use it in further analysis.",
-      "set_the_reference_area": "Set the reference area"
+      "set_the_reference_area": "Set reference area"
     }
   },
   "current_event": {
