chore: refactor LLM analytics components

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -187,7 +187,8 @@
     "no_analytics": "No analytics for the selected area"
   },
   "llm_analytics": {
-    "header_info": "### AI insights\nAdd a reference area, and we will compare selected area with it. To receive personalized conclusions, please fill out the [bio](/profile)."
+    "header": "AI insights",
+    "header_info": "Add a reference area, and we will compare selected area with it. To receive personalized conclusions, please fill out the [bio](/profile)."
   },
   "draw_tools": {
     "area": "Polygon",
