feat(18340): Ai insights in Analytics panel (#738)
* feat(18340): Add endpoint for LLM analysis

* feat(18340): Draft of the LLM Analytics panel. Isn't combined with Analytics Panel data yet

* feat: add simple header text

* chore: shorter toast for successfully saving Ref Area

* feat: add retries and user-language header to api/llm_analytics request

* feat: reorganize Analytics panel so it can show both AI and regular analytics at the same time

* chore: refactor LLM analytics components

* chore: remove todo

* chore: increase number of retries for LLM analytics API to 5

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -186,6 +186,10 @@
     "will_be_provided": "will be provided here",
     "no_analytics": "No analytics for the selected area"
   },
+  "llm_analytics": {
+    "header": "AI insights",
+    "header_info": "Add a reference area, and we will compare selected area with it. To receive personalized conclusions, please fill out the [bio](/profile)."
+  },
   "draw_tools": {
     "area": "Polygon",
     "line": "Line",
