--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -58,13 +58,13 @@
   },
   "groups": {
     "layers_in_selected_area": "Layers in selected area",
-    "your_layers": "Your Layers",
-    "kontur_analytics": "Kontur Analytics",
-    "qa": "QA",
-    "osmbasedmap": "OpenStreetMap Based",
+    "your_layers": "Your layers",
+    "kontur_analytics": "Kontur analytics",
+    "qa": "OpenStreetMap inspector",
+    "osmbasedmap": "OpenStreetMap based",
     "other": "Other",
     "elevation": "Elevation",
-    "photo": "Photo",
+    "photo": "Imagery",
     "map": "Map"
   },
   "advanced_analytics_data_list": {
@@ -84,8 +84,8 @@
     "title": "Multi-criteria decision analysis",
     "name": "Create MCDA",
     "modal_title": "Multi-criteria decision analysis",
-    "modal_input_name": "Name",
-    "modal_input_name_placeholder": "Set layer name",
+    "modal_input_name": "Analysis name",
+    "modal_input_name_placeholder": "e.g., Climate change",
     "modal_input_indicators": "List of layers",
     "modal_input_indicators_placeholder": "Select layers",
     "modal_input_indicators_no_options": "No options",
