chore: move layer action hint strings into layer_actions.tooltips

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -31,12 +31,14 @@
     "selected_area_label": "Selected area",
     "upload_mcda": "Upload MCDA"
   },
-  "tooltips": {
-    "erase": "Erase",
-    "download": "Download",
-    "edit": "Edit",
-    "hide": "Hide",
-    "show": "Show"
+  "layer_actions": {
+    "tooltips": {
+      "erase": "Erase",
+      "download": "Download",
+      "edit": "Edit",
+      "hide": "Hide",
+      "show": "Show"
+    }
   },
   "feed": "Feed",
   "deselect": "Deselect",
