--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -31,6 +31,15 @@
     "selected_area_label": "Selected area",
     "upload_mcda": "Upload MCDA"
   },
+  "layer_actions": {
+    "tooltips": {
+      "erase": "Erase",
+      "download": "Download",
+      "edit": "Edit",
+      "hide": "Hide",
+      "show": "Show"
+    }
+  },
   "feed": "Feed",
   "deselect": "Deselect",
   "spinner_text": "Gathering data",
